--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -8,3 +8,5 @@ jobs:
         run: echo "Hello World"
       - name: Print Goodbye
         run: echo "Done - bye!"
+      - name: Checkout Code
+        uses: actions/checkout@v3
